code/k8s/010/matchRequestHeader/ingress-nginx-match-request-header.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: snippet
  name: snippet-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snippet
  template:
    metadata:
      labels:
        app: snippet
    spec:
      containers:
        - name: snippet-deploy
          image: nginx:1.29.0
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: snippet
  name: snippet-svc
spec:
  ports:
    - name: 80-80
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: snippet
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snippet-igs
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      set $agentflag 0;
      if ($http_user_agent ~* "(Android|IPhone)") { 
        set $agentflag 1;
      }
      if ($agentflag = 1) {
        return 302 http://www.baidu.com;
      }
spec:
  rules:
    - host: snippet.request.com
      http:
        paths:
          - path: /
            pathType: Prefix # 定义路径匹配的类型为 Prefix，表示匹配以指定路径（/) 开头的所有请求
            backend:
              service:
                name: snippet-svc
                port:
                  number: 80
